feat: modify qa_pipeline

--- a/create_dataset/QA_Geneartion.ipynb
+++ b/create_dataset/QA_Geneartion.ipynb
@@ -10,7 +10,7 @@
     "    - PDF to Markdown\n",
     "    - Link(Text) to Text\n",
     "    - Link(Text) to Markdown\n",
-    "- GPT API를 통해 Q-A 데이터셋을 구축합니다."
+    "- GPT & Claude API를 통해 Q-A 데이터셋을 구축합니다."
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
     "\n",
     "# PDF를 마크다운 형식으로 변환하고 청크로 분할하는 함수\n",
     "\n",
-    "def extract_markdown_from_pdf(pdf_path, chunk_size=500, chunk_overlap=100):\n",
+    "def extract_markdown_from_pdf(pdf_path, chunk_size=1000, chunk_overlap=100):\n",
     "    \"\"\"\n",
     "    pymupdf4llm 라이브러리를 사용해 PDF 문서를 마크다운으로 변환하고 텍스트/표/이미지 등의 요소를 포함한 형태로 추출한 후\n",
     "    RecursiveCharacterTextSplitter를 사용하여 청크로 나눕니다.\n",
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PDF 파일 로드 중: ../create_dataset/source_data/pdf/prompt_test.pdf\n",
+      "PDF 파일 로드 중: ../create_dataset/source_data/pdf/prompt_test_2.pdf\n",
       "Successfully imported LlamaIndex\n",
       "총 6개의 청크로 나누었습니다.\n"
      ]
@@ -195,36 +195,24 @@
    ],
    "source": [
     "# PDF 파일 로드 및 청크로 나누기\n",
-    "elements = extract_markdown_from_pdf('../create_dataset/source_data/pdf/prompt_test.pdf')"
+    "elements = extract_markdown_from_pdf('../create_dataset/source_data/pdf/prompt_test_2.pdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### 과목 소개\n",
-      "\n",
-      "##### ‘공통수학1’과 ‘공통수학2’는 수학에 대한 기초 소양과 학문적 이해를 기반으로 학생 스스로 자신의 적성을 개발하여 창의성을 갖춘 사람으로 성장하기 위해 수학의 여러 영역의 기본적인 내용을 학습하는 과목이다. 특히 ‘공통수학1’은 중학교 ‘변화와 관계’ 영역에서 학습한 다항식, 방정식, 부등식이 심화되고 다양한 유형으로 다루어지며, ‘자료와 가능성’ 영역에서 학습한 경우의 수가 순열과 조합을 활용하는 방법으로 체계화된다.\n",
-      "\n",
-      "### 무엇을 배울까요?\n",
-      "#### 40 [ 경상남도교육청]\n",
-      "\n",
-      "|범주 다항식 방정식과 부등식 지식·이해 경우의 수 행렬|Col2|내용 요소 다항식의 연산 나머지정리 인수분해|\n",
-      "|---|---|---|\n",
-      "||방정식과 부등식|복소수와 이차방정식 이차방정식과 이차함수 여러 가지 방정식과 부등식|\n",
-      "||경우의 수|합의 법칙과 곱의 법칙 순열과 조합|\n",
-      "||행렬|행렬과 그 연산|\n",
-      "|과정·기능|다항식, 방정식과 부등식, 경우의 수, 행렬의 개념, 원리, 법칙이나 자신의 수학적 사고와 전략을 설명하기 수학적 절차를 수행하고 계산하기 적절한 전략을 사용하여 문제해결하기 이차방정식과 이차부등식을 이차함수와 연결하기 이차함수의 그래프와 직선의 위치 관계를 판단하기 다항식, 방정식과 부등식, 경우의 수, 행렬의 개념, 원리, 법칙, 성질을 탐구하기 방정식과 부등식 풀기 방정식과 부등식, 경우의 수, 행렬을 실생활과 연결하기 식과 그래프, 수학 기호, 행렬 등을 표현하기||\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "print(elements[0])"
+    "print(len(elements))"
    ]
   },
   {
@@ -240,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,8 +351,8 @@
     "                qa_pairs.extend(batch_qa_pairs)\n",
     "            \n",
     "            # 각 QA 쌍에 PDF 출처 정보 추가\n",
-    "            for qa_pair in qa_pairs:\n",
-    "                qa_pair[\"SOURCE\"] = pdf_name\n",
+    "            # for qa_pair in qa_pairs:\n",
+    "            #     qa_pair[\"SOURCE\"] = pdf_name\n",
     "            \n",
     "            # 전체 QA 쌍 목록에 추가\n",
     "            all_qa_pairs.extend(qa_pairs)\n",
@@ -395,27 +383,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "총 1개의 PDF 파일을 찾았습니다.\n"
+      "총 2개의 PDF 파일을 찾았습니다.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "PDF 처리 중:   0%|          | 0/1 [00:00<?, ?it/s]"
+      "PDF 처리 중:   0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "[처리 시작] prompt_test_2\n",
+      "PDF 파일 로드 중: ./source_data/pdf//prompt_test_2.pdf\n",
+      "Successfully imported LlamaIndex\n",
+      "총 6개의 청크로 나누었습니다.\n",
+      "배치 처리 중: 1/2\n",
+      "배치 처리 중: 2/2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PDF 처리 중:  50%|█████     | 1/2 [01:49<01:49, 109.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[처리 완료] prompt_test_2: 12개의 QA 쌍 생성\n",
       "\n",
       "[처리 시작] prompt_test\n",
       "PDF 파일 로드 중: ./source_data/pdf//prompt_test.pdf\n",
@@ -428,16 +437,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "PDF 처리 중: 100%|██████████| 1/1 [01:26<00:00, 86.62s/it]"
+      "PDF 처리 중: 100%|██████████| 2/2 [03:20<00:00, 100.03s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[처리 완료] prompt_test: 12개의 QA 쌍 생성\n",
+      "==================================================\n",
+      "[에러 발생] | Error code: 529 - {'type': 'error', 'error': {'type': 'overloaded_error', 'message': 'Overloaded'}} | \n",
       "\n",
-      "처리 완료! 총 12개의 QA 쌍이 생성되었습니다.\n",
+      "\n",
+      "-----\n",
+      "\n",
+      "\n",
+      "\n",
+      "### 과목 소개\n",
+      "\n",
+      "##### ‘기본수학1’과 ‘기본수학2’는 기본적인 삶을 영위하고 일상생활을 포함한 다양한 맥락의 문제를 해결하며 수학적 사고를 경험하고 ...\n",
+      "==================================================\n",
+      "[처리 완료] prompt_test: 6개의 QA 쌍 생성\n",
+      "\n",
+      "처리 완료! 총 18개의 QA 쌍이 생성되었습니다.\n",
       "결과는 다음 위치에 저장되었습니다:\n",
       "- JSONL: ./output_data//all_qa_pairs.jsonl\n"
      ]
