feat: modified extract_markdown

--- a/create_dataset/QA_Geneartion.ipynb
+++ b/create_dataset/QA_Geneartion.ipynb
@@ -57,130 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import PyPDF2\n",
-    "\n",
-    "# 텍스트 추출에 집중: PyPDF2 라이브러리를 사용해 PDF의 모든 페이지에서 텍스트를 추출하고 청크로 나눔\n",
-    "def extract_text_from_pdf(pdf_path, chunk_size=4000, chunk_overlap=150):\n",
-    "    \"\"\"\n",
-    "    PDF 파일에서 텍스트를 추출하고 지정된 크기의 청크로 나눕니다.\n",
-    "    pdf_path: PDF 파일 경로\n",
-    "    chunk_size: 각 청크의 최대 문자 수 (기본값: 4000)\n",
-    "    chunk_overlap: 청크 간 겹치는 문자 수 (기본값: 150)\n",
-    "    return: 텍스트 청크 리스트\n",
-    "    \"\"\"\n",
-    "    all_text = \"\"\n",
-    "    \n",
-    "    # PDF 파일 열기\n",
-    "    with open(pdf_path, 'rb') as f:\n",
-    "        reader = PyPDF2.PdfReader(f)\n",
-    "        num_pages = len(reader.pages)\n",
-    "        \n",
-    "        # 모든 페이지의 텍스트 추출\n",
-    "        for page_num in range(num_pages):\n",
-    "            page = reader.pages[page_num]\n",
-    "            page_text = page.extract_text()\n",
-    "            \n",
-    "            # 페이지 번호 추가\n",
-    "            all_text += f\"- {page_num + 1} -\"\n",
-    "            \n",
-    "            # 텍스트가 있는 경우에만 추가\n",
-    "            if page_text:\n",
-    "                all_text += page_text\n",
-    "            \n",
-    "    # 텍스트를 청크로 나누기\n",
-    "    chunks = []\n",
-    "    start = 0\n",
-    "    \n",
-    "    while start < len(all_text):\n",
-    "        # 청크의 끝 위치 계산\n",
-    "        end = min(start + chunk_size, len(all_text))\n",
-    "        \n",
-    "        # 중간에 끊기지 않도록 문장이나 단락의 끝 찾기\n",
-    "        if end < len(all_text):\n",
-    "            # 줄바꿈이나 마침표 등에서 끊기도록 설정\n",
-    "            for delimiter in ['\\n\\n', '\\n', '. ', '? ', '! ']:\n",
-    "                last_delimiter = all_text.rfind(delimiter, start, end)\n",
-    "                if last_delimiter > start:\n",
-    "                    end = last_delimiter + len(delimiter)\n",
-    "                    break\n",
-    "        \n",
-    "        # 청크 추가\n",
-    "        chunks.append(all_text[start:end])\n",
-    "        \n",
-    "        # 다음 청크의 시작 위치 (겹치는 부분 고려)\n",
-    "        start = end - chunk_overlap if end < len(all_text) else end\n",
-    "    \n",
-    "    return chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PDF 파일 로드\n",
-    "elements = extract_text_from_pdf(\"../../asset/pdf/고교학점제 이해를 위한 Q & A_250325_214831.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pymupdf4llm\n",
-    "import os\n",
-    "import nest_asyncio\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "# PDF를 마크다운 형식으로 변환하고 청크로 분할하는 함수\n",
-    "\n",
-    "def extract_markdown_from_pdf(pdf_path, chunk_size=1000, chunk_overlap=100):\n",
-    "    \"\"\"\n",
-    "    pymupdf4llm 라이브러리를 사용해 PDF 문서를 마크다운으로 변환하고 텍스트/표/이미지 등의 요소를 포함한 형태로 추출한 후\n",
-    "    RecursiveCharacterTextSplitter를 사용하여 청크로 나눕니다.\n",
-    "    pdf_path: PDF 파일 경로\n",
-    "    chunk_size: 각 청크의 최대 문자 수 (기본값: 4000)\n",
-    "    chunk_overlap: 청크 간 겹치는 문자 수 (기본값: 200)\n",
-    "    return: 마크다운 형식의 텍스트 청크 리스트\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # PDF 파일이 존재하는지 확인\n",
-    "    print(f\"PDF 파일 로드 중: {pdf_path}\")\n",
-    "    \n",
-    "    # PDF 파일 로드 (LlamaMarkdownReader 직접 생성)\n",
-    "    reader = pymupdf4llm.LlamaMarkdownReader()\n",
-    "    docs = reader.load_data(pdf_path)\n",
-    "    \n",
-    "    # 모든 문서 텍스트 합치기\n",
-    "    full_text = \"\"\n",
-    "    for doc in docs:\n",
-    "        full_text += doc.text + \"\\n\\n\"\n",
-    "    \n",
-    "    # RecursiveCharacterTextSplitter를 사용하여 텍스트를 청크로 나누기\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(\n",
-    "        chunk_size=chunk_size,\n",
-    "        chunk_overlap=chunk_overlap,\n",
-    "        length_function=len,\n",
-    "        separators=[\"\\n\\n\\n-----\\n\\n\\n\\n\"]\n",
-    "    )\n",
-    "    \n",
-    "    chunks = text_splitter.split_text(full_text)\n",
-    "    \n",
-    "    print(f\"총 {len(chunks)}개의 청크로 나누었습니다.\")\n",
-    "    return chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -189,13 +66,18 @@
      "text": [
       "PDF 파일 로드 중: ../create_dataset/source_data/pdf/prompt_test_2.pdf\n",
       "Successfully imported LlamaIndex\n",
-      "총 6개의 청크로 나누었습니다.\n"
+      "총 15개의 청크로 나누었습니다.\n",
+      "총 15개의 청크 중 13개의 유효한 청크를 추출했습니다.\n",
+      "총 13개의 청크 중 13개의 병합된 청크를 생성했습니다.\n",
+      "병합으로 0개의 청크가 줄었습니다.\n"
      ]
     }
    ],
    "source": [
+    "from utils import extract_markdown\n",
+    "\n",
     "# PDF 파일 로드 및 청크로 나누기\n",
-    "elements = extract_markdown_from_pdf('../create_dataset/source_data/pdf/prompt_test_2.pdf')"
+    "elements = extract_markdown.extract_markdown_from_pdf('../create_dataset/source_data/pdf/prompt_test_2.pdf')"
    ]
   },
   {
