feat: add pdf & modify qa_pipeline and .gitignore

--- a/finetuning/Unsloth_Finetuning_test.ipynb
+++ b/finetuning/Unsloth_Finetuning_test.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "bc41e9af",
+      "metadata": {},
+      "source": [
+        "## 00. 프로젝트 목적\n",
+        "- 본 프로젝트는 제작한 QA 데이터셋을 customer llm에 Fine-tuning 하기 위한 프로젝트입니다.\n",
+        "- Hugging Face에 업로드 한 "
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "4c7c59fe",
       "metadata": {
         "id": "4c7c59fe"
