feat: modify 주석 수정

--- a/vector_store/pinecone.ipynb
+++ b/vector_store/pinecone.ipynb
@@ -62,10 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f745b6e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/bearable/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_docling import DoclingLoader\n",
     "from docling.chunking import HybridChunker\n",
@@ -73,7 +82,7 @@
     "from langchain_core.documents import Document\n",
     "\n",
     "# 문서 로딩 및 청킹을 위한 설정\n",
-    "FILE_PATH = [\"../create_dataset/source_data/prompt_test.pdf\"]\n",
+    "FILE_PATH = [\"../create_dataset/source_data/json 완성 PDF/운영1.pdf\"]\n",
     "EXPORT_TYPE = ExportType.DOC_CHUNKS # 문서 청크 추출 타입 설정\n",
     "EMBED_MODEL_ID = \"BAAI/bge-m3\"\n",
     "\n",
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "6f2a4199",
    "metadata": {},
    "outputs": [
@@ -158,10 +167,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "로드된 문서 수: 13\n",
-      "변환된 문서 수: 13\n",
+      "로드된 문서 수: 104\n",
+      "변환된 문서 수: 104\n",
       "샘플 메타데이터:\n",
-      "{'headings': ['/cid01173/cid03134/cid02299/cid03295/cid00018'], 'doc_items_labels': ['table'], 'filename': 'prompt_test.pdf'}\n"
+      "{'headings': ['고교학점제의 이해'], 'doc_items_labels': ['text'], 'filename': '운영1.pdf'}\n"
      ]
     }
    ],
@@ -500,10 +509,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a48f0fce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\n",
+       "    {\n",
+       "        \"name\": \"mypolio-curriculums\",\n",
+       "        \"metric\": \"dotproduct\",\n",
+       "        \"host\": \"mypolio-curriculums-x6xczpc.svc.aped-4627-b74a.pinecone.io\",\n",
+       "        \"spec\": {\n",
+       "            \"serverless\": {\n",
+       "                \"cloud\": \"aws\",\n",
+       "                \"region\": \"us-east-1\"\n",
+       "            }\n",
+       "        },\n",
+       "        \"status\": {\n",
+       "            \"ready\": true,\n",
+       "            \"state\": \"Ready\"\n",
+       "        },\n",
+       "        \"vector_type\": \"dense\",\n",
+       "        \"dimension\": 3072,\n",
+       "        \"deletion_protection\": \"disabled\",\n",
+       "        \"tags\": {\n",
+       "            \"embedding_model\": \"text-embedding-3-large\"\n",
+       "        }\n",
+       "    }\n",
+       "]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pinecone 인덱스 확인\n",
     "pc.list_indexes()"
@@ -511,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9db0670b",
    "metadata": {},
    "outputs": [
@@ -519,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jn/6v9ffl5x6gvf4y16kqq_wqgh0000gn/T/ipykernel_24779/588479685.py:4: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
+      "/var/folders/jn/6v9ffl5x6gvf4y16kqq_wqgh0000gn/T/ipykernel_27162/588479685.py:4: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
       "  embeddings = OpenAIEmbeddings(\n"
      ]
     }
@@ -536,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8ab825d9",
    "metadata": {},
    "outputs": [],
@@ -550,13 +592,13 @@
     "    documents=docs,\n",
     "    embedding=embeddings,\n",
     "    index_name=\"mypolio-curriculums\",\n",
-    "    namespace=\"curriculum\", # 네임스페이스 설정: 고교학점제 -> curriculum, 진로&진학 상담 -> course, 고교학점제 테이블 -> curriculum-table, 진로&진학 상담 테이블 -> course-table\n",
+    "    namespace=\"curriculum\", # 네임스페이스 설정: 고교학점제 -> curriculum, 진로&진학 상담 -> course, 서비스 문의 -> service\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "658cb5a7",
    "metadata": {},
    "outputs": [
@@ -588,7 +630,7 @@
     "pinecone_database.add_documents(\n",
     "    documents=docs,\n",
     "    index_name=\"mypolio-curriculums\",\n",
-    "    namespace=\"curriculum-table\", # 네임스페이스 설정: 고교학점제 -> curriculum, 진로&진학 상담 -> course, 고교학점제 테이블 -> curriculum-table, 진로&진학 상담 테이블 -> course-table\n",
+    "    namespace=\"curriculum-table\", # 네임스페이스 설정: 고교학점제 -> curriculum, 진로&진학 상담 -> course, 서비스 문의 -> service\n",
     ")"
    ]
   },
